Completed Holy Grail

--- a/holy-grail.html
+++ b/holy-grail.html
@@ -12,6 +12,7 @@
     h1, body, #title { 
         font-family: 'Arial', serif; 
         color: black; 
+        min-width: 540px;
     } 
 </style> 
 </head>
