--- a/mondrian.html
+++ b/mondrian.html
@@ -30,7 +30,37 @@
                 <div class="row3SquareL"></div>
                 <div class="row3SquareR"></div>
             </div>
-
+            <div class="lrow4">
+                <div class="row4SquareL"></div>
+                <div class="row4SquareR"></div>
+            </div>
+            <div class="lrow5">
+                <div class="row5SquareL"></div>
+                <div class="row5SquareR"></div>
+            </div>
+            <div class="lrow6">
+                <div class="row6SquareL"></div>
+                <div class="row6SquareC"></div>
+                <div class="row6SquareR"></div>
+            </div>
+            <div class="lrow7">
+                <div class="row7SquareL"></div>
+                <div class="row7SquareC"></div>
+                <div class="row7SquareR"></div>
+            </div>
+            <div class="lrow8">
+                <div class="row8SquareL"></div>
+                <div class="row8SquareC"></div>
+                <div class="row8SquareR"></div>
+            </div>
+            <div class="lrow9">
+                <div class="row9SquareL"></div>
+                <div class="row9SquareR"></div>
+            </div>
+            <div class="lrow10">
+                <div class="row10SquareL"></div>
+                <div class="row910quareR"></div>
+            </div>
         </div>
 
 
