--- a/mondrian.html
+++ b/mondrian.html
@@ -55,18 +55,115 @@
             </div>
             <div class="lrow9">
                 <div class="row9SquareL"></div>
+                <div class="row9SquareC"></div>
                 <div class="row9SquareR"></div>
+                <div class="row9SquareRL"></div>
+                <div class="row9SquareRR"></div>
             </div>
             <div class="lrow10">
                 <div class="row10SquareL"></div>
-                <div class="row910quareR"></div>
+                <div class="row10SquareC"></div>
+                <div class="row10SquareR"></div>
+            </div>
+        </div>
+       
+        <div class="center">
+            <div class="crow1">
+                <div class="crow1SquareL"></div>
+                <div class="crow1SquareR"></div>
+            </div>
+            <div class="crow2">
+                <div class="crow2SquareL"></div>
+                <div class="crow2SquareR"></div>
+            </div>
+            <div class="crow3">
+                <div class="crow3SquareL"></div>
+                <div class="crow3SquareR"></div>
+            </div>
+            <div class="crow4">
+                <div class="crow4SquareL"></div>
+                <div class="crow4SquareC"></div>
+                <div class="crow4SquareR"></div>
+            </div>
+            <div class="crow5">
+                <div class="crow5SquareL"></div>
+                <div class="crow5SquareC"></div>
+                <div class="crow5SquareR"></div>
+            </div>
+            <div class="crow6">
+                <div class="crow6SquareL"></div>
+                <div class="crow6SquareC"></div>
+                <div class="crow6SquareR"></div>
+            </div>
+            <div class="crow7">
+                <div class="crow7SquareL"></div>
+                <div class="crow7SquareC"></div>
+                <div class="crow7SquareR"></div>
+            </div>
+            <div class="crow8">
+                <div class="crow8SquareL"></div>
+                <div class="crow8SquareR"></div>
+            </div>
+            <div class="crow9">
+                <div class="crow9SquareL"></div>
+                <div class="crow9SquareR"></div>
+            </div>
+            <div class="crow10">
+                <div class="crow10SquareL"></div>
+                <div class="crow10SquareC"></div>
+                <div class="crow10SquareR"></div>
             </div>
         </div>
 
-
-
-        <div class="center"></div>
-        <div class="right"></div>
+        <div class="right">
+            <div class="rrow1">
+                <div class="Rrow1SquareL"></div>
+                <div class="Rrow1SquareR"></div>
+            </div>
+            <div class="rrow2">
+                <div class="Rrow2SquareL"></div>
+                <div class="Rrow2SquareR"></div>
+            </div>
+            <div class="rrow3">
+                <div class="Rrow3SquareL"></div>
+                <div class="Rrow3SquareR"></div>
+            </div>
+            <div class="rrow4">
+                <div class="Rrow4SquareL"></div>
+                <div class="Rrow4SquareR"></div>
+            </div>
+            <div class="rrow5">
+                <div class="Rrow5SquareL"></div>
+                <div class="Rrow5SquareR"></div>
+            </div>
+            <div class="rrow6">
+                <div class="Rrow6SquareL"></div>
+                <div class="Rrow6SquareC"></div>
+                <div class="Rrow6SquareR"></div>
+            </div>
+            <div class="rrow7">
+                <div class="Rrow7SquareL"></div>
+                <div class="Rrow7SquareC"></div>
+                <div class="Rrow7SquareR"></div>
+            </div>
+            <div class="rrow8">
+                <div class="Rrow8SquareL"></div>
+                <div class="Rrow8SquareC"></div>
+                <div class="Rrow8SquareR"></div>
+            </div>
+            <div class="rrow9">
+                <div class="Rrow9SquareL"></div>
+                <div class="Rrow9SquareC"></div>
+                <div class="Rrow9SquareR"></div>
+                <div class="Rrow9SquareRL"></div>
+                <div class="Rrow9SquareRR"></div>
+            </div>
+            <div class="rrow10">
+                <div class="Rrow10SquareL"></div>
+                <div class="Rrow10SquareC"></div>
+                <div class="Rrow10SquareR"></div>
+            </div>
+        </div>
         </section>
     </body>
 </head>
